--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "colors": "^1.4.0",
     "concurrently": "^7.0.0",
     "dotenv": "^11.0.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "node-mailjet": "^6.0.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
